@@ -10,6 +10,7 @@ WISH: just for fun, do shade and tint with XRender.
 WISH: support tex fonts
 
 TODO: document transient_for, vt and the grab etc. functionality
+TODO: add warning about perl interpreter and setuid/setgid
 
 	- perl: implement additional hook: line_update, add_lines.
         - perl: urxvt::line now can set via ->t and ->r.
@@ -18,6 +19,9 @@ TODO: document transient_for, vt and the grab etc. functionality
         - perl: much increased functionality, better overlays, popup support
           and much much more.
         - perl: anyevent support.
+        - free the resource database: this plugs a massive memory hole. as a
+          side effect, it also gets rid of XGetDefault calls.
+        - free one of the cursors, fixes a small memory leaks.
 
 6.3  Wed Jan  4 22:37:10 CET 2006
         - SECURITY FIX: on systems using openpty, permissions were
